@@ -1,3 +1,10 @@
+2005-05-26  Richard Henderson  <rth@redhat.com>
+
+	* elf64-alpha.c (struct alpha_elf_link_hash_entry): Remove 
+	plt_old_section, plt_old_value.
+	(elf64_alpha_adjust_dynamic_symbol): Don't set it.
+	(elf64_alpha_size_plt_section_1): Don't use it.
+
 2005-05-26  Jakub Jelinek  <jakub@redhat.com>
 
 	* elfcode.h (elf_object_p): Fail if e_shoff != 0, e_shnum == 0 and
